# gpu_playground

./: .gitignore  CMakeLists.txt  Readme.md  cuda_perf_analysis.sh
convolution/: CMakeLists.txt  compare.cpp  compare.hpp  convolution.cpp  convolution.cu  main.cpp  reference_calc.cpp  reference_calc.hpp  timer.hpp  utils.hpp
cuda_kernels_profiling/c++/: CMakeLists.txt  Readme.md  pytorch_square.cpp
cuda_kernels_profiling/python/: pytorch_square.py  pytorch_squarev2.py
docs/: EXAMPLES.md  cuda-copilot-rules.md  cuda_best_practices_guide.md
matrix_mul/: matrix_mul.cpp
matrix_transpose/: CMakeLists.txt  matrix_transpose.cpp
prefix_sum/: CMakeLists.txt  prefix_sum.cpp
reverse_array/: CMakeLists.txt  reverse.cpp
silu/: CMakeLists.txt  silu.cpp
softmax/: CMakeLists.txt  softmax.cpp
swiglu/: CMakeLists.txt  swiglu.cpp
